--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ perf = "deny"
 [dependencies]
 anyhow = "1.0.59"                                   # error handling
 bytes = "1.3.0"                                     # helps manage buffers
+color-eyre = "0.6.2"
 const_format = "0.2.32"
 thiserror = "1.0.32"                                # error handling
 tokio = { version = "1.23.0", features = ["full"] } # async networking
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
