--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,10 +30,12 @@ perf = "deny"
 # DON'T EDIT THIS!
 [dependencies]
 anyhow = "1.0.59"                                   # error handling
+async_once = "0.2.6"
 bytes = "1.3.0"                                     # helps manage buffers
 color-eyre = "0.6.2"
 const_format = "0.2.32"
 derivative = "2.2.0"
+lazy_static = "1.4.0"
 thiserror = "1.0.32"                                # error handling
 tokio = { version = "1.23.0", features = ["full"] } # async networking
 tracing = "0.1.40"
