--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ bytes = "1.3.0"                                     # helps manage buffers
 color-eyre = "0.6.2"
 derivative = "2.2.0"
 lazy_static = "1.4.0"
+structopt = "0.3.26"
 thiserror = "1.0.32"                                # error handling
 tokio = { version = "1.23.0", features = ["full"] } # async networking
 tracing = "0.1.40"
